# gateway-service

./: .gitignore  BUILD.bazel  Jenkinsfile  Makefile  README.md  WORKSPACE  bazel-gateway-service  config.yaml  deps.bzl  go.mod  go.sum
.buildkite/: pipeline.yml
cmd/: main.go
cmd/server/: BUILD.bazel  main.go  setup.go
config/: BUILD  gateway.yml  lb.yml  token.yml
docs/: BUILD.bazel  docs.go  swagger.json
pkg/: config.yaml
pkg/config/: BUILD.bazel  config.go  config_suite_test.go  config_test.go  lb_config.go  providers.go  token_config.go  utils.go  utils_test.go
pkg/entity/: BUILD.bazel  user.go
pkg/lb/: BUILD.bazel  accessor.go  account.go  lb.go  maintenance.go  payment.go
pkg/middleware/: BUILD.bazel  token_authenticator.go
pkg/processor/: BUILD.bazel  request.go  request_test.go  response.go
pkg/service/: BUILD.bazel  accessor.go  account.go  client.go  maintenance.go  payment.go  service.go
pkg/storage/: BUILD.bazel  accessor.go  fake_storage.go  storage.go  user.go
pkg/storage/cache/: BUILD.bazel  accessor.go  fake_cache.go  redis.go
pkg/token/: BUILD.bazel  token.go
