load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/Melon-Network-Inc/gateway-service/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//docs",
        "//pkg/config",
        "//pkg/middleware",
        "//pkg/service",
        "//pkg/storage",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_melon_network_inc_common//pkg/config",
        "@com_github_melon_network_inc_common//pkg/log",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
    ],
)

go_binary(
    name = "server",
    data = [
        "//config:gateway.yml",
        "//config:lb.yml",
    ],
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
