load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "account.go",
        "client.go",
        "payment.go",
    ],
    importpath = "github.com/Melon-Network-Inc/gateway-service/pkg/service",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/processor",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_go_resty_resty_v2//:resty",
        "@com_github_melon_network_inc_common//pkg/log",
    ],
)
